--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0"
+    "fs": "0.0.2",
+    "meteor-node-stubs": "~0.2.0",
+    "phantomjs-prebuilt": "^2.1.10"
   }
 }
