--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^0.8.7",
     "fs": "0.0.2",
     "meteor-node-stubs": "~0.2.0",
-    "phantomjs-prebuilt": "^2.1.10"
+    "phantomjs-prebuilt": "^2.1.10",
+    "xmldom": "^0.1.22"
   }
 }
