--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.18.0",
     "bcrypt": "^0.8.7",
+    "chrome-remote-interface": "^0.22.0",
     "fs": "0.0.2",
     "meteor-node-stubs": "~0.2.0",
     "phantomjs-prebuilt": "^2.1.10",
