--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chrome-remote-interface": "^0.22.0",
     "fs": "0.0.2",
     "meteor-node-stubs": "~0.2.0",
+    "moment-timezone": "^0.5.13",
     "phantomjs-prebuilt": "^2.1.10",
     "xmldom": "^0.1.22"
   }
